--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "3.12",
+    "lil-gui": "^0.20.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
